Bug 148624 - only show tooltip when document has focus. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D187418